WIP: Remove images

--- a/share/petsc/saws/fe/index.html
+++ b/share/petsc/saws/fe/index.html
@@ -399,12 +399,12 @@
         color: #888;
       }
     </style>
-    <link rel="icon" href="images/petsc_favicon.png"/>
+    <link rel="icon" href="https://petsc.org/release/_static/petsc_favicon.png"/>
   </head>
 
   <body>
     <header>
-      <h1><a href="https://petsc.org"><img src="images/PETSc_RBG.svg" style="height:1em;"/></a> Finite Element Viewer</h1>
+      <h1><a href="https://petsc.org"><img src="https://petsc.org/release/_static/PETSc-TAO_RGB.svg" style="vertical-align:top;height:1.45em;"/></a> Finite Element Viewer</h1>
     </header>
 
     <div id="feviewer" class="feviewer">
